AC_INIT([apertium-dbus], [0.1], [wynand.winterbach@gmail.com])
AM_INIT_AUTOMAKE([apertium-dbus], [0.1], no-define)

AM_MAINTAINER_MODE
AM_PATH_PYTHON

PKG_CHECK_MODULES(APERTIUM, apertium-3.0 >= 3.0.0)
PKG_CHECK_MODULES(PYGTK, pygtk-2.0)

AC_SUBST(PYGTK_CFLAGS)
AC_SUBST(PYGTK_LIBS)

AC_OUTPUT([
Makefile
src/Makefile
org.apertium.mode.service
org.apertium.info.service
])
