AC_INIT([apertium-dbus], [0.1], [wynand.winterbach@gmail.com])
AM_INIT_AUTOMAKE([apertium-dbus], [0.1], no-define)

AM_MAINTAINER_MODE
AM_PATH_PYTHON

PKG_CHECK_MODULES(APERTIUM, apertium-3.0 >= 3.0.0)
PKG_CHECK_MODULES(DBUS,  dbus-1 >= 0.34 )
PKG_CHECK_MODULES(PYDBUS, dbus-python >= 0.82)


AC_SUBST(PYGTK_CFLAGS)
AC_SUBST(PYGTK_LIBS)

AC_OUTPUT([
Makefile
src/Makefile
org.apertium.mode.service
org.apertium.info.service
])
